<resources>
    <string name="app_name">AndroidBaseExemplo</string>
    <string name="enter">Entrar</string>
    <string name="password">Senha</string>
    <string name="user_name">Nome do Usuário</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="loremipsunlist">%d - Lorem ipsum dolor sit amet, \n consectetur adipiscing elit.</string>



    <!--Side Menu-->
    <string name="menu_item_1">Menu Item 1</string>
    <string name="menu_item_2">Menu Item 2</string>
    <string name="menu_item_3">Menu Item 3</string>
    <string name="menu_item_4">Menu Item 4</string>
    <string name="menu_item_5">Menu Item 5</string>
    <string name="menu_item_6">Menu Item 6</string>
    <string name="menu_item_7">Menu Item 7</string>
    <string name="bt_home">Home</string>
    <string name="bt_devices">Dispositivos</string>
    <string name="bt_config">Configuração</string>
    <string name="bt_about">Sobre</string>

    <!--Robots-->
    <string name="robo_1">Robo 1</string>
    <string name="robo_2">Robo 2</string>
    <string name="robo_3">Robo 3</string>
    <string name="robo_4">Robo 4</string>
    <string name="home">Home</string>
</resources>
