<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/robot_1"
        android:enabled="true"
        android:icon="@drawable/ic_robot_6"
        android:title="@string/robo_1"/>

    <item
        android:id="@+id/robot_2"
        android:enabled="true"
        android:icon="@drawable/ic_robot_5"
        android:title="@string/robo_2"/>

    <item
        android:id="@+id/robot_3"
        android:enabled="true"
        android:icon="@drawable/ic_robot_1"
        android:title="@string/robo_3"/>

    <item
        android:id="@+id/robot_4"
        android:enabled="true"
        android:icon="@drawable/ic_robot_3"
        android:title="@string/robo_4"/>


</menu>