<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.example.rm.androidbaseexemplo.components.CustonConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="@dimen/iv_login_logo"
            android:layout_height="@dimen/iv_login_logo"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/margin_btw_elements"
            android:contentDescription="TODO"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/til_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@drawable/ic_luffy_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_btw_elements"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/til_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_logo"
            tools:visibility="visible">

            <com.example.rm.androidbaseexemplo.components.CustomEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_name"
                android:inputType="textAutoComplete"
                android:lines="1"
                android:textColorHint="@color/colorPrimaryDark"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_btw_elements"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/bt_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_user_name"
            tools:visibility="visible">

            <com.example.rm.androidbaseexemplo.components.CustomEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/bt_enter"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_btw_elements"
            android:layout_marginRight="@dimen/margin_default"
            android:text="@string/enter"
            android:textAllCaps="true"
            android:textSize="@dimen/bt_text_default"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            tools:visibility="visible" />


    </com.example.rm.androidbaseexemplo.components.CustonConstraintLayout>
</layout>